--- a/NOVA/Views/Shared/_Layout_isemri.cshtml
+++ b/NOVA/Views/Shared/_Layout_isemri.cshtml
@@ -45,7 +45,7 @@
 
 
 </head>
-<body>
+<body class="framebody">
 
 
     <div class="layout-wrapper layout-content-navbar">
@@ -60,7 +60,7 @@
             </div>
 
             <div class="layout-page" style="padding-left:0 !important">
-                <div class="container-fluid">
+                <div class="container-fluid isimbar">
                     <div class="row">
                         <div class="col d-none" style="font-size:14px">
                             <div class="form-check form-check-inline">
@@ -76,7 +76,7 @@
                             <a class="nav-link dropdown-toggle hide-arrow nav-align-right" href="javascript:void(0);" data-bs-toggle="dropdown">
                                 <div class="avatar avatar-online">
                                     @{
-                                        string s = ViewBag.Id + ".png?" + DateTime.Now.Ticks.ToString();
+                                        string s = Request.Cookies["Id"].Value + ".png?" + DateTime.Now.Ticks.ToString();
                                     }
                                     <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
                                         <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto rounded-circle">
@@ -188,16 +188,13 @@
                 @RenderBody()
                 <!-- / Content -->
                 <!-- Footer -->
-                <footer class="content-footer footer bg-footer-theme">
-                    <div class="container-xxl d-flex flex-wrap justify-content-between py-2 flex-md-row flex-column">
-                        <div style="padding-left:40%">
-                            ©
-                            <script>document.write(2022);</script>
-                            , designed by
-                            <a href="#" target="_blank" class="footer-link fw-bolder"> <img src="/assets/img/icons/brands/Nova.png" height="auto" width="3%" class="mb-1" /> NOVA</a>
+                <div class="foot" style="position:absolute;bottom:0;width:80%">
+                    
+                        <div class="text-center" style="margin-left:7%">
+                            ©<script>document.write(2022);</script>, designed by
+                            <a href="#" target="_blank" > <img src="/assets/img/icons/brands/Nova.png" height="auto" width="2%" class="mb-1" /> NOVA</a>
                         </div>
-                    </div>
-                </footer>
+                </div>
                 <!-- / Footer -->
 
 
