--- a/NOVA/Views/Shared/_Layout_menu.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu.cshtml
@@ -412,6 +412,7 @@
                                     <a href="@Url.Action("SiparisRaporu", "Sevkiyat")" id="mussiparisrap1" style="cursor:pointer;display: @ViewBag.DisplaySiparisRaporu" class="nav__dropdown-item">• Müşteri Siparişi Raporu</a>
                                     <a href="@Url.Action("SaticiSiparisRaporu", "Sevkiyat")" id="saticisiprap1" style="cursor: pointer; display: @ViewBag.DisplaySaticiSiparisRaporu" class="nav__dropdown-item">• Satıcı Siparişi Raporu</a>
                                     <a href="@Url.Action("SevkMalKabul", "Sevkiyat")" id="sevkmalkabul1" style="cursor: pointer; display: @ViewBag.DisplaySevkMalKabul" class="nav__dropdown-item">• Sevk & Kabul İşlemleri</a>
+                                    <a href="@Url.Action("DepoTransfer", "Sevkiyat")" id="depotransfer1" style="cursor: pointer; display: @ViewBag.DisplayDepoTransfer" class="nav__dropdown-item">• Sevk & Kabul İşlemleri</a>
                                 </div>
                             </div>
                         </div>
