--- a/NOVA/Views/Shared/_Layout_menu2.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu2.cshtml
@@ -92,6 +92,11 @@
                         <div data-i18n="Without menu">Sevk & Kabul İşlemleri</div>
                     </a>
                 </li>
+                <li class="menu-item" id="depoTransfer" style="display: @ViewBag.DisplayDepoTransfer">
+                    <a href="@Url.Action("DepoTransfer", "Sevkiyat")" class="menu-link">
+                        <div data-i18n="Without menu">Sevk & Kabul İşlemleri</div>
+                    </a>
+                </li>
             </ul>
 
         </li>
